Fix table head overlap issue (#1058)

--- a/src/client/stylesheets/main.less
+++ b/src/client/stylesheets/main.less
@@ -14,6 +14,8 @@
 @border-color-base: #d9d9d9; // major border color
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
 @font-family: "Heebo", sans-serif, Microsoft YaHei !important;
+@bg-light-color: #f8f9fa;
+@white-color: #fff;
 
 * {
   -moz-box-sizing: border-box;
@@ -298,11 +300,11 @@ body {
 
 input {
   font: unset !important;
-  font-family: "Heebo", sans-serif, Microsoft YaHei !important;
+  font-family: @font-family;
 }
 
 .ant-statistic-content {
-  font-family: "Heebo", sans-serif, Microsoft YaHei !important;
+  font-family: @font-family;
   font-size: 42px;
   font-weight: 100 !important;
 }
@@ -543,7 +545,7 @@ span.ellipsis-text {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: @bg-light-color !important;
 }
 .monospace-code {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono,
@@ -555,5 +557,12 @@ span.ellipsis-text {
 }
 
 .ant-table-thead > tr > th {
-  background-color: unset !important;
+  background-color: @white-color !important;
+}
+
+.ant-table-thead > tr:first-child > th:first-child {
+  border-top-left-radius: 0px;
+}
+.ant-table-thead > tr:first-child > th:last-child {
+  border-top-right-radius: 0px;
 }
